tests/fail_compile/derive_empty_enum.rs
use propagate::Propagate;

#[derive(Propagate)]
enum MyEnum {}

fn main() {}
