tests/fail_compile/derive_empty_enum.stderr
error: `Propagate` cannot be derived for enums without fields
 --> tests/fail_compile/derive_empty_enum.rs:3:10
  |
3 | #[derive(Propagate)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Propagate` (in Nightly builds, run with -Z macro-backtrace for more info)
